# advent-of-code

./: .gitignore  CMakeLists.txt
day-1/: solution.cpp
day-2/: solution.cpp
day-3/: solution.cpp
day-4/: solution.cpp
day-5/: solution.cpp
day-6/: solution.cpp
day-7/: solution.cpp
day-8/: solution.cpp
